--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
